--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "framer-motion": "^11.18.2",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.468.0",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
