--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "build:optimized": "node optimize-images.mjs && vite build",
+    "build": "vite build && node scripts/generate-static.mjs",
+    "build:optimized": "node optimize-images.mjs && vite build && node scripts/generate-static.mjs",
     "optimize:images": "node optimize-images.mjs",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -27,6 +27,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
+    "@vitejs/plugin-react-swc": "^4.2.2",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
@@ -35,6 +36,8 @@
     "p-limit": "^7.2.0",
     "sharp": "^0.34.5",
     "terser": "^5.44.1",
-    "vite": "^7.0.4"
+    "vite": "^7.0.4",
+    "vite-plugin-pages": "^0.33.2",
+    "vite-plugin-ssg": "^0.1.0"
   }
 }
